--- a/website-theme/sections/hero-banner.html
+++ b/website-theme/sections/hero-banner.html
@@ -30,7 +30,7 @@
     {% dnd_row %}
       {% dnd_module
         path='@hubspot/rich_text'
-        html={{ context.content || '<h1>This is your main headline.</h1><p>Use this space to tell everyone about what you have to offer.</p>' }}
+        html={{ context.content || '<h1>Alt</h1><p>Alt</p>' }}
       %}
       {% end_dnd_module %}
     {% end_dnd_row %}
